# util-linux

./: meson.build
po-man/: install-translations.sh  meson.build  translate.sh
